<resources>
    <string name="app_name" translatable="false">SpeedQuiz</string>
    <string name="home_title" translatable="false">Speed Quiz</string>
    <string name="home_new_player">New player</string>
    <string name="home_start_game">Start game</string>
    <string name="home_new_player_edit_text">Player name</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_questions">Questions</string>
    <string name="menu_about">About</string>
    <string name="button_menu">Menu</string>
    <string name="button_restart">Restart</string>
    <string name="about_version">Version: 1.0.0</string>
    <string name="about_author">Author: Arsène Brosy</string>
    <string name="ok_button">OK</string>
    <string name="settings_questions_speed">Questions speed</string>
    <string name="settings_questions_number">Question count</string>
    <string name="error_too_many_questions">too many questions</string>
    <string name="error_not_enough_question">not enough question</string>
    <string name="add_button">Add</string>
    <string name="questions_question">Question</string>
    <string name="cancel_button">Cancel</string>
    <string name="questions_is_true">Is true</string>
</resources>