<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/questions_title"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/menu_questions"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/question_label_layout"
        app:layout_constraintTop_toBottomOf="@id/questions_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/questions_question">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/question_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkbox_is_true"
        app:layout_constraintTop_toBottomOf="@id/question_label_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/questions_is_true"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/add_button"
        app:layout_constraintBottom_toTopOf="@id/cancel_button"
        android:textSize="15sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="15sp" />

</androidx.constraintlayout.widget.ConstraintLayout>